--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,12 @@
-
-/* Your CSS Code here. */
+.holder{
+	width:100vw;
+	hight:100vh;
+	}
+.item-1{
+	width:100px;
+	height:100px;
+	background-color:red;
+	display:flex;
+	justify-content:center;
+	align-items:center
+}
